--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+
+
 body {
+  background: skyblue;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
@@ -11,6 +14,10 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+}
+
+.col-md-1.hour {
+  background-color: rgb(197, 179, 197);
 }
 
 .jumbotron {
@@ -43,7 +50,7 @@ textarea{
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color:rgb(161, 161, 147);
   color: white;
 }
 
@@ -61,7 +68,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: purple;
   color: white;
 }
 
