--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  margin-bottom: 4rem;
 }
 
 textarea{
@@ -50,7 +51,7 @@ textarea{
 }
 
 .past {
-  background-color:rgb(161, 161, 147);
+  background-color:rgb(197, 197, 177);
   color: white;
 }
 
